# cyu-calendar

./: .gitignore  Cargo.toml  README.md  Session.vim  flake.nix
.sqlx/: query-49edfc0264f3e4be9a0d5a6d02be0e0c9d7829b027f43ccccc8155c8cd2dd709.json  query-4cebff456656a7b03a5e5c6b6cffe7ad5c0a152dadc4b975c24536a481ef3fb9.json  query-f2555696a25c1d50a238d25afff4633f5ac7360d919dfa161b977b67f344562d.json
cyu-api/: .env  .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js
cyu-api/assets/js/: home.js  links.js  main.js
cyu-api/assets/views/: layout.hbs
cyu-api/assets/views/pages/: home.hbs  links.hbs  login.hbs
cyu-api/migrations/: 20250205225212_init.down.sql  20250205225212_init.up.sql
cyu-api/src/: app.rs  error.rs  main.rs
cyu-api/src/routes/: assets.rs  mod.rs
cyu-api/src/routes/api/: auth.rs  calendar.rs
cyu-api/src/routes/ui/: home.rs  links.rs  login.rs  mod.rs
cyu-api/src/utils/: auth.rs  body.rs  env.rs  ics.rs  mod.rs  response.rs
cyu-api/src/web/routes/: auth.rs  calendar.rs  mod.rs
cyu-api/src/web/routes/api/: auth.rs  calendar.rs  mod.rs
cyu-api/src/web/routes/ui/: mod.rs
cyu-api/src/web/utils/: auth.rs
cyu-api/views/: layout.hbs
cyu-api/views/pages/: home.hbs  login.hbs
cyu-fetcher/: Cargo.toml
cyu-fetcher/src/: auth.rs  calendar.rs  errors.rs  lib.rs
cyu-fetcher/src/utils/: date.rs  mod.rs
cyu-gtk/: Cargo.toml  build.rs
cyu-gtk/resources/: resources.gresource.xml
cyu-gtk/src/: app.rs  main.rs
cyu-gtk/src/pages/: calendar.rs  login.rs  mod.rs
cyu-gtk/src/utils/: auth.rs  calendar_event.rs  config.rs  constants.rs  fetcher.rs  mod.rs  secret.rs
cyu-gtk/src/widgets/: calendar_event.rs  calendar_event_details.rs  calendar_event_map.rs  mod.rs
nix/: buildPackage.nix  cyu-gtk.nix
src/: app.rs  error.rs
src/web/routes/: auth.rs  calendar.rs
