[package]
name = "cyu-api"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
axum = "0.7"
chrono = "0.4.38"
cyu-fetcher = { path = "../cyu-fetcher" }
derive_more = { version = "1.0.0", features = ["from", "display"] }
handlebars = { version = "6.1.0", features = ["dir_source"] }
icalendar = "0.16.8"
itertools = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.10"
tower-http = { version = "0.6.1", features = ["fs"] }
