[package]
name = "cyu-api"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.89"
auth-token = { git = "https://github.com/polnio/auth-token" }
axum = "0.8"
base64 = "0.22.1"
chrono = "0.4.38"
cyu-fetcher = { path = "../cyu-fetcher" }
derive_more = { version = "2.0.0", features = ["from", "display", "deref"] }
dotenv = "0.15.0"
handlebars = { version = "6.1.0", features = ["dir_source"] }
icalendar = "0.16.8"
itertools = "0.14.0"
mime_guess = "2.0.5"
rust-embed = { version = "8.5.0", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite-unbundled"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.11"
tower-http = { version = "0.6.1", features = ["fs"] }
