[package]
name = "cyu-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
getset = "0.1.2"
html-escape = "0.2.13"
itertools = "0.12"
lazy_static = "1.4"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.18"
