[package]
name = "cyu-fetcher"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.33"
getset = "0.1.2"
html-escape = "0.2.13"
itertools = "0.12"
once_cell = "1.19.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.18"
