[package]
name = "cyu-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
cyu-fetcher = { path = "../cyu-fetcher" }
html-escape = "0.2.13"
libsecret = "0.4.0"
once_cell = "1.19.0"
regex = "1.10.3"
relm4 = { version = "0.7.0-beta.2", features = ["libadwaita", "gnome_45"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
xdg = "2.5.2"
