[package]
name = "cyu-gtk"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
cyu-fetcher = { path = "../cyu-fetcher" }
html-escape = "0.2.13"
libsecret = "0.5.0"
libshumate = "0.6.0"
once_cell = "1.19.0"
regex = "1.10.3"
relm4 = { version = "0.9.0", features = ["libadwaita", "gnome_45"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
xdg = "2.5.2"

[build-dependencies]
glib-build-tools = "0.20.0"
