[package]
name = "cyu-gtk"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
cyu-fetcher = { path = "../cyu-fetcher" }
html-escape = "0.2.13"
libsecret = "0.7.0"
libshumate = "0.7.0"
once_cell = "1.19.0"
regex = "1.10.3"
relm4 = { version = "0.10.0", features = ["libadwaita", "gnome_46"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.9.0"
xdg = "3.0.0"

[build-dependencies]
glib-build-tools = "0.21.0"
